# klarity

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  project.toml  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml  test.yml
examples/: basic_usage.py  basic_usage_hosted.py  basic_usage_hosted_insights.py  basic_usage_reasoning.py  basic_usage_together_ai.py  basic_usage_vllm.py  basic_usage_vlm_insights.py  basic_usage_vlm_insights_with_image.py
klarity.egg-info/: PKG-INFO  top_level.txt
notebooks/: hallucination_detection.ipynb
src/klarity/: __init__.py  estimator.py  hallucination_detection.ipynb  models.py  utils.py
src/klarity.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/klarity/benchmarks/: reasoning_budget_control.py
src/klarity/core/: __init__.py  analyzer.py  system_prompts.py  together_wrapper.py
src/klarity/core/schemas/: insight_schemas.py  reasoning_analysis_schemas.py  vlm_analysis_schemas.py
tests/: test_analyzer.py  test_estimator.py  test_reasoning_budget_control.py
tests/benchmarks/: test_reasoning_budget_control.py
